--- a/index.html
+++ b/index.html
@@ -144,7 +144,10 @@
             <option value="หญิง">หญิง</option>
             <option value="อื่น ๆ">อื่น ๆ</option>
         </select>
- 
+ </div>
+  <button onclick="goToMeasurementPage()">เข้าสู่การวัดแรงลม</button>
+  </div>
+  
 <div class="container hidden" id="page2">
     <h2>🌬️ วัดแรงลม</h2>
     <p id="results">กดเริ่มเพื่อวัดแรงลม</p>
